# job-recommender

./: README.md  pyproject.toml  requirements.txt  setup.sh
data/interim/corpus/jobs/: meta.json
data/interim/corpus/resumes/: meta.json
notebooks/: 01_data_wrangling.ipynb  01_text_preprocessing.ipynb  02_eda.ipynb
src/jobrec/: ats.py  classifier.py  config.py  embeddings.py  feature_extractor.py  preprocessing.py  recommender.py  spacy_df_io.py  tagging.py  visualizer.py
